--- a/index.html
+++ b/index.html
@@ -48,49 +48,54 @@
         <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
         <script src="Krista Matsila 22522141 - Final Hand In.js"></script>
         <script>
-          var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
-          function init() {
-              canvas = document.getElementById("canvas");
-              anim_container = document.getElementById("animation_container");
-              dom_overlay_container = document.getElementById("dom_overlay_container");
-              var comp=AdobeAn.getComposition("1E24F0BA1F971C45B94500EE93245F8B");
-              var lib=comp.getLibrary();
-              var loader = new createjs.LoadQueue(false);
-              loader.installPlugin(createjs.Sound);
-              loader.addEventListener("fileload", function(evt){handleFileLoad(evt,comp)});
-              loader.addEventListener("complete", function(evt){handleComplete(evt,comp)});
-              var lib=comp.getLibrary();
-              loader.loadManifest(lib.properties.manifest);
-          }
-          function handleFileLoad(evt, comp) {
-              var images=comp.getImages();	
-              if (evt && (evt.item.type == "image")) { images[evt.item.id] = evt.result; }	
-          }
-          function handleComplete(evt,comp) {
-              //This function is always called, irrespective of the content. You can use the variable "stage" after it is created in token create_stage.
-              var lib=comp.getLibrary();
-              var ss=comp.getSpriteSheet();
-              var queue = evt.target;
-              var ssMetadata = lib.ssMetadata;
-              for(i=0; i<ssMetadata.length; i++) {
-                  ss[ssMetadata[i].name] = new createjs.SpriteSheet( {"images": [queue.getResult(ssMetadata[i].name)], "frames": ssMetadata[i].frames} )
-              }
-              exportRoot = new lib.RECOVER_KristaMatsilaHandin5();
-              stage = new lib.Stage(canvas);	
-              //Registers the "tick" event listener.
-              fnStartAnimation = function() {
-                  stage.addChild(exportRoot);
-                  createjs.Ticker.framerate = lib.properties.fps;
-                  createjs.Ticker.addEventListener("tick", stage);
-              }	    
-              //Code to support hidpi screens and responsive scaling.
-              AdobeAn.makeResponsive(true,'both',false,1,[canvas,anim_container,dom_overlay_container]);	
-              AdobeAn.compositionLoaded(lib.properties.id);
-              fnStartAnimation();
-          }
-          function playSound(id, loop, offset) {
-              return createjs.Sound.play(id, {'interrupt':createjs.Sound.INTERRUPT_EARLY, 'loop': loop, 'offset': offset});}
-          </script>
+            var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
+
+            function init() {
+                canvas = document.getElementById("canvas");
+                anim_container = document.getElementById("animation_container");
+                dom_overlay_container = document.getElementById("dom_overlay_container");
+                var comp=AdobeAn.getComposition("1E24F0BA1F971C45B94500EE93245F8B");
+                var lib=comp.getLibrary();
+                var loader = new createjs.LoadQueue(false);
+                loader.installPlugin(createjs.Sound);
+                loader.addEventListener("fileload", function(evt){handleFileLoad(evt,comp)});
+                loader.addEventListener("complete", function(evt){handleComplete(evt,comp)});
+                var lib=comp.getLibrary();
+                loader.loadManifest(lib.properties.manifest);
+            }
+
+            function handleFileLoad(evt, comp) {
+                var images=comp.getImages();	
+                if (evt && (evt.item.type == "image")) { images[evt.item.id] = evt.result; }	
+            }
+
+            function handleComplete(evt,comp) {
+                //This function is always called, irrespective of the content. You can use the variable "stage" after it is created in token create_stage.
+                var lib=comp.getLibrary();
+                var ss=comp.getSpriteSheet();
+                var queue = evt.target;
+                var ssMetadata = lib.ssMetadata;
+                for(i=0; i<ssMetadata.length; i++) {
+                    ss[ssMetadata[i].name] = new createjs.SpriteSheet( {"images": [queue.getResult(ssMetadata[i].name)], "frames": ssMetadata[i].frames} )
+                }
+                exportRoot = new lib.RECOVER_KristaMatsilaHandin5();
+                stage = new lib.Stage(canvas);	
+                //Registers the "tick" event listener.
+                fnStartAnimation = function() {
+                    stage.addChild(exportRoot);
+                    createjs.Ticker.framerate = lib.properties.fps;
+                    createjs.Ticker.addEventListener("tick", stage);
+                }	    
+                //Code to support hidpi screens and responsive scaling.
+                AdobeAn.makeResponsive(true,'both',false,1,[canvas,anim_container,dom_overlay_container]);	
+                AdobeAn.compositionLoaded(lib.properties.id);
+                fnStartAnimation();
+            }
+
+            function playSound(id, loop, offset) {
+                return createjs.Sound.play(id, {'interrupt':createjs.Sound.INTERRUPT_EARLY, 'loop': loop, 'offset': offset});
+            }
+        </script>
     </head>
     <body onload="init();">
         <div class="navbars">
@@ -100,7 +105,6 @@
             <span class="nav-items main-nav"  name="#skills">Skills</span>
             <span class="nav-items main-nav"  name="#contact">Contact</span>
         </div>
-        <!-- Your website content goes here -->
 
         <!-- side nav -->
         <div class="side-navbar">
@@ -196,7 +200,7 @@
                         </div>
                         <div class="col-7 pl-1" id="about-text">
                             <h1>Hi, I'm Krista</h1>
-                            <p> I am a second year Bachelor of
+                            <p> I am a final year Bachelor of
                                 Information Science
                                 student. When I'm not competing with due dates, I enjoy spending time reading and writing thought pieces on music and films, sometimes
                                 building websites, and exploring what's new in UI/UX spaces. I have a deep passion for
