small change to about me

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                 Information Science in
                                 student Multimedia. When I'm not competing with due dates, I enjoy spending time reading and writing thought pieces on music and films, sometimes
                                 building websites, and exploring what's new in UI/UX spaces. I have a deep passion for
-                                creation. Right now I'm drawn to exploring a space in UI/UX design, touching into certain aspects of backend as well, after my degree.
+                                creation and technology. Right now I'm drawn to exploring a space in UI/UX design, touching into certain aspects of backend as well, after my degree.
                             </p> 
                             <p> I am trying to put myself out
                                 there more, and have begun investing
